--- a/front/.env
+++ b/front/.env
@@ -1,3 +1,3 @@
 VITE_PROD = "1"
 VITE_DEV_URL = "http://localhost:5173/"
-VITE_PROD_URL = "https://xevchess-xamobarbaran.b4a.run/"
+VITE_PROD_URL = "http://xevchess.duckdns.org/"
