added reconnection logic

--- a/socketServer/.env
+++ b/socketServer/.env
@@ -1,4 +1,1 @@
-PROD= "1"
-VITE_PROD= "1"
-VITE_DEV_URL = "http://localhost:5173/"
-VITE_PROD_URL = "https://xevchess-xamobarbaran.b4a.run/"
+ENV = "prod"
